# ec2connect

./: .coveragerc  .drone.yml  Pipfile  README.md  setup.cfg  tox.ini
docs/: conf.py
scripts/: build-number.sh
src/ec2connect/: console.py  skeleton.py
src/ec2connect/util/: aws.py
tests/: test_console.py  test_skeleton.py
tests/util/: test_aws.py  test_saml2aws.py
